# incode

./: .gitignore  Cargo.toml  README.md  build.rs  debug_output.py  demo_lldb  demo_lldb_working.rs  version.txt
.ws/: state.json
src/: error.rs  lib.rs  lldb_manager.rs  main.rs  mcp_server.rs
src/tools/: advanced_analysis.rs  breakpoints.rs  debug_information.rs  execution_control.rs  lldb_control.rs  memory_inspection.rs  mod.rs  process_control.rs  register_inspection.rs  session_management.rs  stack_analysis.rs  target_info.rs  target_information.rs  thread_management.rs  variables.rs
test_debuggee/: Makefile  main.cpp  memory.cpp  test_debuggee  threads.cpp  variables.cpp
tests/: minimal_lldb_test.rs  standalone_lldb_test.rs  test_advanced_analysis.rs  test_basic_lldb.rs  test_breakpoints.rs  test_breakpoints_simple.rs  test_debug_information.rs  test_execution_control.rs  test_lldb_control.rs  test_mcp_integration.rs  test_memory_inspection.rs  test_process_control.rs  test_process_simple.rs  test_real_lldb.rs  test_register_inspection.rs  test_session_management.rs  test_setup.rs  test_stack_analysis.rs  test_target_information.rs  test_thread_management.rs  test_variables.rs
