[package]
name = "incode"
version = "0.1.0"
edition = "2021"
description = "InCode - Comprehensive MCP server for LLDB debugging automation"
authors = ["InCode Project"]
license = "MIT"
repository = "https://github.com/user/incode"
keywords = ["lldb", "debugging", "mcp", "automation", "ai"]
categories = ["development-tools", "debugging"]

[dependencies]
# LLDB integration
lldb-sys = "0.0.31"

# MCP Protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cross-platform process management
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[lib]
name = "incode"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[[bin]]
name = "incode"
path = "src/main.rs"