[[bin]]
name = "incode"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
libc = "0.2"
lldb-sys = "0.0.31"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.clap]
features = ["derive"]
version = "4.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tokio-util]
features = ["codec"]
version = "0.7"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dependencies.uuid]
features = ["v4", "serde"]
version = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
mock = []

[lib]
name = "incode"
path = "src/lib.rs"

[package]
authors = ["Bahram Shamshiri <jowharshamshiri@gmail.com>"]
categories = ["development-tools"]
description = "InCode - MCP server for LLDB debugging automation"
documentation = "https://docs.rs/incode"
edition = "2021"
homepage = "https://github.com/jowharshamshiri/incode"
keywords = ["lldb", "debugging", "mcp", "automation", "ai"]
license = "MIT"
name = "incode"
readme = "README.md"
repository = "https://github.com/jowharshamshiri/incode"
version = "0.26.25674"

[profile.dev]
debug = true
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[target.'cfg(target_os = "macos")'.dependencies]
